福島Project/src/objects/JFK_JigyosyoTR__c.object
<CustomObject>
    <description>JFK</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>事業所</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area_Kubun__c</fullName>
        <description>「エリア」で指定されている項目の区分部分</description>
        <formula>Left(Text(Area__c) , Find(&quot;:&quot;, Text(Area__c) ) -1)</formula>
        <label>エリア区分</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Name__c</fullName>
        <description>「エリア」で指定されている項目の名称部分</description>
        <formula>Mid(Text(Area__c) , Find(&quot;:&quot;, Text(Area__c) ) + 1, 100)</formula>
        <label>エリア名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>エリア</label>
        <picklist>
            <picklistValues>
                <fullName>1:県北</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:県中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:県南</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:会津</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:南会津</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:相双</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:いわき</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Biko__c</fullName>
        <label>備考</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BosyuJoho_ShikyuJiki__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>募集情報（支給時期）</label>
        <referenceTo>JFK_Bosyu__c</referenceTo>
        <relationshipName>BosyuJoho_ShiKyuJikis</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BosyuJoho_YearTime__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>募集情報（年度・募集回）</label>
        <referenceTo>JFK_Bosyu__c</referenceTo>
        <relationshipName>BosyuJoho_YearTimes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BosyuKai__c</fullName>
        <formula>If (IsBlank( BosyuJoho_YearTime__c ),
       BosyuJoho_ShikyuJiki__r.Bosyu__r.BosyuKai__c,
       BosyuJoho_YearTime__r.BosyuKai__c )</formula>
        <label>募集回</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BosyuNendo__c</fullName>
        <formula>If (IsBlank( BosyuJoho_YearTime__c ),
       BosyuJoho_ShikyuJiki__r.Bosyu__r.BosyuNendo__c,
       BosyuJoho_YearTime__r.BosyuNendo__c )</formula>
        <label>募集年度</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_HasseiBi__c</fullName>
        <description>エラーが発生した日付</description>
        <label>エラー発生日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Hassei__c</fullName>
        <defaultValue>false</defaultValue>
        <description>支給額計算など、この事業所に関する処理上のエラーが発生した場合に設定される</description>
        <label>エラー発生</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Error_HasseijinoTantosya__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>エラー発生フラグが設定されたときに処理を実施した担当者</description>
        <label>エラー発生時の担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Error_HasseijinoTantosyaJs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Naiyo__c</fullName>
        <description>複数のエラーがある場合は必要に応じて改行</description>
        <label>エラー内容</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>JigyoKBN__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>事業所区分</label>
        <referenceTo>JFK_CommonM__c</referenceTo>
        <relationshipName>JigyoKBNs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JigyoshoCD__c</fullName>
        <description>募集年度.募集回_エリア区分.事業所の整理番号  で生成される事業所を表すコードです。</description>
        <formula>TEXT(BosyuJoho_YearTime__r.BosyuNendo__c) &amp; &quot;.&quot; &amp;  TEXT(BosyuJoho_YearTime__r.BosyuKai__c) &amp; &quot;_&quot; &amp; LEFT(TEXT(Area__c),1)  &amp;    &quot;.&quot; &amp;  SeiriNO__c</formula>
        <label>事業所コード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KaiMe__c</fullName>
        <formula>If (IsBlank( BosyuJoho_YearTime__c ),
       BosyuJoho_ShikyuJiki__r.KaiMe__c,
       null )</formula>
        <label>○回目</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KanryoHokoku_KoyoJissekiHokokuBi__c</fullName>
        <label>完了報告雇用実績報告書日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NenMe__c</fullName>
        <formula>If (IsBlank( BosyuJoho_YearTime__c ),
       BosyuJoho_ShikyuJiki__r.NenMe__c,
       null )</formula>
        <label>○年目</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nendo_Kai_Jigyosyo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>年度・募集回別事業所TR</label>
        <referenceTo>JFK_JigyosyoTR__c</referenceTo>
        <relationshipName>Nendo_Kai_Jigyosyos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SeiriNO__c</fullName>
        <label>整理番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShikyuKetteiDate__c</fullName>
        <label>支給決定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShikyuKetteiNO__c</fullName>
        <label>支給決定番号</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shikyu_Syuryo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1年目2回目以降に何らかの理由で支給対象外となった場合にチェックを入れる</description>
        <label>支給終了</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shikyu_Torikeshi__c</fullName>
        <defaultValue>false</defaultValue>
        <description>事業所自体が支給取り消しとなった場合にチェックが入る</description>
        <label>支給取消</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shikyutaisyo_ShimeBi__c</fullName>
        <formula>BosyuJoho_ShikyuJiki__r.ShikyuShimeBi__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>支給対象締日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShinseiBi__c</fullName>
        <label>申請日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TeisyutsuKikan_KaishiBi__c</fullName>
        <description>実績報告の提出開始日</description>
        <label>提出期間開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TeisyutsuKikan_SyuryouBi__c</fullName>
        <description>実績報告の提出終了日</description>
        <label>提出期間終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UketsukeBi__c</fullName>
        <label>受付日</label>
        <type>Date</type>
    </fields>
    <label>事業所TR</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BosyuJoho_YearTime__c</columns>
        <columns>BosyuJoho_ShikyuJiki__c</columns>
        <columns>Account__c</columns>
        <columns>Shikyutaisyo_ShimeBi__c</columns>
        <columns>Nendo_Kai_Jigyosyo__c</columns>
        <columns>JigyoshoCD__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Shikyu</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>S_</value>
        </filters>
        <label>支給</label>
    </listViews>
    <nameField>
        <label>事業所TR名</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IN0000000CxcnMAC_00NN0000000aYsdMAE</fullName>
        <active>true</active>
        <field>JFK_ErrorLog__c.JigyosyoTR_ShikyuJiki__c</field>
        <filterItems>
            <field>JFK_JigyosyoTR__c.Nendo_Kai_Jigyosyo__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>エラーログ_事業所TR（支給時期）</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IN0000000CxcnMAC_00NN0000000aYtCMAU</fullName>
        <active>true</active>
        <field>JFK_ErrorLog__c.JigyosyoTR_Bosyukai__c</field>
        <filterItems>
            <field>JFK_JigyosyoTR__c.Nendo_Kai_Jigyosyo__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>エラーログ_事業所TR（募集回）</name>
    </namedFilters>
    <recordTypes>
        <fullName>JigyoshoShikyu_Shikyujiki</fullName>
        <active>true</active>
        <description>支給時期（○年目○回目）毎の事業所情報を登録します。</description>
        <label>事業所情報（支給時期）</label>
    </recordTypes>
    <recordTypes>
        <fullName>JigyoshoShikyu_YearTimes</fullName>
        <active>true</active>
        <description>募集回（○年度第○回）毎の事業所情報を登録します。</description>
        <label>事業所情報（募集回）</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>